--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,22 @@
-appdirs==1.4.0
-attrs==15.2.0
-BeautifulSoup==3.2.1
-beautifulsoup4==4.6.0
-blinker==1.3
-bs4==0.0.1
-certifi==2017.4.17
-chardet==3.0.4
-click==6.7
-configglue==1.1.2
-configobj==5.0.6
-cryptography==1.2.3
-cycler==0.9.0
-debtags==2.0
-decorator==4.0.6
-defer==1.0.6
-dirspec==13.10
-duplicity==0.7.6
-ecdsa==0.13
-enum34==1.1.2
-feedparser==5.1.3
-Flask==0.12.2
-gyp==0.1
-httplib2==0.9.1
-idna==2.5
-ipaddress==1.0.16
-itsdangerous==0.24
-Jinja2==2.9.6
-joblib==0.9.4
-lockfile==0.12.2
-lxml==3.5.0
-Mako==1.0.3
-MarkupSafe==0.23
-matplotlib==1.5.1
-nemo-emblems==3.0.0
-netifaces==0.10.4
-numpy==1.11.0
-oauthlib==1.0.3
-oneconf==0.3.9
-packaging==16.8
-PAM==0.4.2
-pandas==0.17.1
-paramiko==1.16.0
-pexpect==4.0.1
-Pillow==3.1.2
-piston-mini-client==0.7.5
-protobuf==2.6.1
-ptyprocess==0.5
 pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0
-pygobject==3.20.0
-pyinotify==0.9.6
-PyJWT==1.3.0
-pyOpenSSL==0.15.1
-pyparsing==2.1.10
-pyparted==3.10.7
-pyserial==3.0.1
-pysmbc==1.0.15.5
-python-apt==1.1.0b1
-python-dateutil==2.4.2
-python-debian==0.1.27
-pytz==2014.10
+lxml==3.5.0
+numpy==1.11.0
+certifi==2017.4.17
+Cython==0.26
+pyOpenSSL==17.2.0
+backports.functools_lru_cache==1.4
+beautifulsoup4==4.6.0
+com==1.0.0
+ed25519ll==0.6
+protobuf==3.3.0
+ipaddr==2.1.11
+java==0.0.1
+jsonschema==2.6.0
+keyring==10.4.0
+ndg_httpsclient==0.4.2
+nt==0.0.0
+org==1.0.0
+pytest==3.2.0
+redis==2.10.5
+wincertstore==0.2
 pyxdg==0.25
-reportlab==3.3.0
-requests==2.18.1
-scikit-learn==0.18.1
-scipy==0.17.0
-service-identity==16.0.0
-six==1.10.0
-sklearn==0.0
-Twisted==16.0.0
-urllib3==1.21.1
-uTidylib==0.2
-Werkzeug==0.12.2
-zope.interface==4.1.3
