--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,4 @@
-pyasn1==0.1.9
-lxml==3.5.0
-numpy==1.11.0
-certifi==2017.4.17
-Cython==0.26
-pyOpenSSL==17.2.0
-backports.functools_lru_cache==1.4
+Flask==0.12.2
 beautifulsoup4==4.6.0
-protobuf==3.3.0
-ipaddr==2.1.11
-jsonschema==2.6.0
-keyring==10.4.0
-ndg_httpsclient==0.4.2
-pytest==3.2.0
-redis==2.10.5
-wincertstore==0.2
-pyxdg==0.25
+requests==2.18.1
+bs4==0.0.1
