--- a/requirements_b.txt
+++ b/requirements_b.txt
@@ -25,7 +25,7 @@ httplib2==0.9.1
 idna==2.5
 ipaddress==1.0.16
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2>=2.10.1
 joblib==0.9.4
 lockfile==0.12.2
 lxml==3.5.0
